--- a/content/post/2022-02-10-vartional-inference/index.Rmd
+++ b/content/post/2022-02-10-vartional-inference/index.Rmd
@@ -87,19 +87,19 @@ Now that the optimization problem is specified the next step is to develop an al
     &= \int \log \Big{(} \frac{p(\theta, y)}{ \prod_{i=1}^m q_i(\theta_i)} \Big{)} \prod_{i=1}^m                 q_i(\theta_i) \; d \theta \\
     &= \int \big{(} \log p(\theta, y) -  \sum_{i=1}^m \log q_i(\theta_i) \big{)} \prod_{i=1}^m                 q_i(\theta_i) \; d \theta \\
     &= \int \big{(} \log p(\theta, y) -  \sum_{i=1}^m \log q_i(\theta_i) \big{)} \prod_{i=1}^m                 q_i(\theta_i) \; d \theta \\
-    &= \int q_{i}(\theta_i) \Big{[} \underbrace{\int q_{-i}(\theta_{-i}) \log p(\theta, y) \; d \theta_{-i}}_{\text{$E_{q_{-i}}[\log p(\theta, y)]$}} \Big{]} \; d \theta_i - \int q_i (\theta_i) \log q_i (\theta_i) \; d \theta_i - \underbrace{\int q_{-i} (\theta_{-i}) \log q_{-i} (\theta_{-i}) \; d \theta_{-i}}_{\text{function of $\theta_{-1}$ only}} \\
-    &= \int q_{i}(\theta_i) E_{q_{-i}}[\log p(\theta, y)] \; d \theta_i - \int q_i (\theta_i) \log q_i (\theta_i) \; d \theta_i + \text{constant} \\
-    &= \int q_{i}(\theta_i) \frac{E_{q_{-i}}[\log p(\theta, y)]}{\log q_i (\theta_i)} \; d \theta_i + \text{constant} \\
-    &= \int q_{i}(\theta_i) \log \Big{(}\frac{\text{exp}\{E_{q_{-i}}[\log p(\theta, y)] \}}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant}.
+    &= \int q_{i}(\theta_i) \Big{[} \underbrace{\int q_{-i}(\theta_{-i}) \log p(\theta, y) \; d \theta_{-i}}_{\text{$E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)]$}} \Big{]} \; d \theta_i - \int q_i (\theta_i) \log q_i (\theta_i) \; d \theta_i - \underbrace{\int q_{-i} (\theta_{-i}) \log q_{-i} (\theta_{-i}) \; d \theta_{-i}}_{\text{function of $\theta_{-1}$ only}} \\
+    &= \int q_{i}(\theta_i) E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)] \; d \theta_i - \int q_i (\theta_i) \log q_i (\theta_i) \; d \theta_i + \text{constant} \\
+    &= \int q_{i}(\theta_i) \frac{E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)]}{\log q_i (\theta_i)} \; d \theta_i + \text{constant} \\
+    &= \int q_{i}(\theta_i) \log \Big{(}\frac{\text{exp}\{E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)] \}}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant}.
 \end{align}
-Considered the $\text{exp} \{ E_{q_{-i}}[\log p(\theta, y)] \}$ term  as an unnormalized density of $\theta_i$. Furthermore, notice that $E_{q_{-i}}[\log p(\theta, y)] \propto E_{q_{-i}}[\log p(\theta_i \mid \cdot )]$ where $p(\theta_i \mid \cdot)$, commonly called the full conditional, is the density of $\theta_i$ conditional on all observed data $y$ and all unobserved parameters $\theta_{-i}$. Then it follows that,
+Considered the $\text{exp} \{ E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)] \}$ term  as an unnormalized density of $\theta_i$. Furthermore, notice that $E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)] \propto E_{q_{-i}(\theta_{-i})}[\log p(\theta_i \mid \cdot )]$ where $p(\theta_i \mid \cdot)$, commonly called the full conditional, is the density of $\theta_i$ conditional on all observed data $y$ and all unobserved parameters $\theta_{-i}$. Then it follows that,
 \begin{align}
     \text{ELBO}(q)  
-    &= \int q_{i}(\theta_i) \log \Big{(}\frac{\text{exp} \{ E_{q_{-i}}[\log p(\theta, y)] \}}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant} \\
-    &= \int q_{i}(\theta_i) \log \Big{(}\frac{E_{q_{-i}}[\log p(\theta_i \mid \cdot)]}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant} \\ 
+    &= \int q_{i}(\theta_i) \log \Big{(}\frac{\text{exp} \{ E_{q_{-i}(\theta_{-i})}[\log p(\theta, y)] \}}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant} \\
+    &= \int q_{i}(\theta_i) \log \Big{(}\frac{E_{q_{-i}(\theta_{-i})}[\log p(\theta_i \mid \cdot)]}{q_i (\theta_i)} \Big{)} \; d \theta_i + \text{constant} \\ 
     &= - \text{KL} (q_i \mid \tilde{p}) + \text{constant}.
 \end{align}
-Where, $\tilde{p}(\theta_i) \propto  E_{q_{-i}}[\log p(\theta_i \mid \cdot)]$. Which is maximized when $q_i(\theta_i) \propto E_{q_{-i}}[\log p(\theta_i \mid \cdot)]$. So, CAVI finds the "optimal" approximate posterior density by iteratively updating each $q_i(\theta_i) \propto  E_{q_{-i}}[\log p(\theta_i \mid \cdot)]$ for $i = 1 \cdots m$ until the ELBO is maximized. If conjugate priors are used for the hyperparameters then each $q_i(\theta_i)$ is a known closed form density and CAVI simply becomes iteratively updating the hyperparameters for each $q_i(\theta_i)$. 
+Where, $\tilde{p}(\theta_i) \propto  E_{q_{-i}(\theta_{-i})}[\log p(\theta_i \mid \cdot)]$. Which is maximized when $q_i(\theta_i) \propto E_{q_{-i}(\theta_{-i})}[\log p(\theta_i \mid \cdot)]$. So, CAVI finds the "optimal" approximate posterior density by iteratively updating each $q_i(\theta_i) \propto  E_{q_{-i}(\theta_{-i})}[\log p(\theta_i \mid \cdot)]$ for $i = 1 \cdots m$ until the ELBO is maximized. If conjugate priors are used for the hyperparameters then each $q_i(\theta_i)$ is a known closed form density and CAVI simply becomes iteratively updating the hyperparameters for each $q_i(\theta_i)$. 
 
 ### A Finite Mixture of Gaussians
 Let $\mathbf{y} = (y_1, y_2, \cdots, y_N)$ be a sample from a finite mixture of $K$ Gaussian distributions. That is, each observation $y_i$ is assumed to be drawn from one of $K$ Gaussian distributions. Let $p_k$ define the proportion of observations that were drawn from Gaussian distribution $k$. Then the joint distribution of $\mathbf{y}$ can be written as
@@ -128,9 +128,12 @@ The intuition behind this representation is that we start with a stick of length
 \end{align}
 with $K$ chosen to be sufficiently large. However, in this case the stick-breaking representation is used as a prior for $\mathbf{p}$,
 \begin{align}
-     p_k &= V_k \prod_{j=1}^{k-1}(1 - V_j) \quad \text{where} \quad V_k \sim \text{Beta}(1, \lambda) \quad k = 1, 2, \cdots K.
+     p_k &= V_k \prod_{j=1}^{k-1}(1 - V_j) \quad \text{where} \quad V_k \sim \text{Beta}(1, \lambda) \quad k = 1, 2, \cdots K-1.
 \end{align}
-The last component, $V_K$, is assumed to be one. We also assign conjugate prior and hyperprior distributions for each $\mu_k$, $\sigma^2_k$, and $\lambda$.
+The last component, $V_K$, is assumed to be one. It will be helpful to know that if $V_k \sim \text{Beta}(1, \lambda)$ then $1-V_k \sim \text{Beta}(\lambda, 1)$ and so it follows that
+\begin{align*}
+p(p_k) = p(V_k) \prod_{j=1}^{k-1}p(1 - V_j) = \text{Beta}(V_k ; 1, \lambda) \prod_{j=1}^{k-1} \text{Beta}(V_j \; \lambda, 1) \quad k = 1, 2, \cdots K-1.
+\end{align*} We also assign conjugate prior and hyperprior distributions for each $\mu_k$, $\sigma^2_k$, and $\lambda$.
 \begin{align}
     \mu_k &\sim N(\mu_{\mu_k}, \sigma^2_{\mu_k}) \quad k = 1, 2, \cdots K, \\
     \sigma^2_k &\sim \text{IG}(\alpha_{\sigma^2_k}, \beta_{\sigma^2_k}) \quad k = 1, 2, \cdots K, \\
@@ -148,7 +151,7 @@ Since conjugate priors were chosen for each of the parameters and hyperparameter
 #### Optimal Densities 
 Recal that each of the optimal densities is given by
 \begin{align*}
-q_{\theta_i}(\theta_i) \propto \text{exp}\{E_{-\theta_i} \log p(\theta_i \mid \cdot)\}.
+q_{\theta_i}(\theta_i) \propto \text{exp}\{E_{q(-\theta_i)} \log p(\theta_i \mid \cdot)\}.
 \end{align*}
 Since we have chosen conjugate prior and hyperprior distributions each of the optimal densities can be calculated in close form.
 
@@ -156,9 +159,9 @@ Since we have chosen conjugate prior and hyperprior distributions each of the op
 For $i = 1, 2, \cdots, N$ and $k = 1, 2, \cdots, K$,
 \begin{align*}
 \log q_{z_{ik}}(z_{ik}) 
-&\propto E_{p, \mu_k, \sigma^2_k} \log p(z_{ik} = 1 \mid \cdot) \\
-&= E_{p, \mu_k, \sigma^2_k} \log p_k N(y_k ; \mu_k, \sigma^2_k) \\
-&= E_{p}[\log p_k] - \frac{1}{2}\log(2\pi) - \frac{1}{2} E_{\sigma^2_k}[\log \sigma^2_k] - \frac{1}{2 E_{\sigma^2_k}[\log \sigma^2_k]} E_{\mu_k}[(y_i - \mu_k)^2] \\
+&\propto E_{q(V_k, \mu_k, \sigma^2_k)} \log p(z_{ik} = 1 \mid \cdot) \\
+&= E_{q(V_k, \mu_k, \sigma^2_k)} \log p_k N(y_k ; \mu_k, \sigma^2_k) \\
+&= E_{q(V_k)}[\log p_k] - \frac{1}{2}\log(2\pi) - \frac{1}{2} E_{q(\sigma^2_k)}[\log \sigma^2_k] - \frac{1}{2 E_{q(\sigma^2_k)}[\log \sigma^2_k]} E_{q(\mu_k)}[(y_i - \mu_k)^2] \\
 &= \log \tilde{p}_{q(p_{ik})}.
 \end{align*}
 It follows that
@@ -170,8 +173,8 @@ It follows that
 For $k = 1, 2, \cdots, K$,
 \begin{align}
     \log q_{\mu_k}(\mu_k) 
-    &\propto E_{\mathbf{z}, \mathbf{\sigma}^2_k} \log p(\mu_k \mid \cdot) \\
-    &= E_{\mathbf{z}, \mathbf{\sigma}^2_k} \sum_{i=1}^N \log N(y_i ; \mu_k, \sigma^2_k)^{z_{ik}} + \log N(\mu_k ; \mu_{\mu_k}, \sigma^2_{\mu_k}).
+    &\propto E_{q(\mathbf{z}, \mathbf{\sigma}^2_k)} \log p(\mu_k \mid \cdot) \\
+    &= E_{q(\mathbf{z}, \mathbf{\sigma}^2_k)} \sum_{i=1}^N \log N(y_i ; \mu_k, \sigma^2_k)^{z_{ik}} + \log N(\mu_k ; \mu_{\mu_k}, \sigma^2_{\mu_k}).
 \end{align}
 It follows that,
 \begin{align}
@@ -179,32 +182,32 @@ q_{\mu_{k}}(\mu_{k}) &= N(\mu_{q(\mu_k)}, \sigma^2_{q(\mu_k)}).
 \end{align}
 Where,
 \begin{align}
-\sigma^2_{q(\mu_k)} = \Big{(}\frac{1}{\sigma^2_0} + \frac{ \sum_{i=1}^N E_{z}[z_{ik}]}{E_{\sigma^2_k} [\sigma^2_k]} \Big{)}^{-1}, \quad
-\mu_{q(\mu_k)} = \sigma^2_{q(\mu_k)} \Big{(} \frac{\mu_0}{\sigma^2_0} + \frac{\sum_{i=1}^N y_i E_{z}[z_{ik}]}{E_{\sigma^2_k} [\sigma^2_k]}\Big{)}.
+\sigma^2_{q(\mu_k)} = \Big{(}\frac{1}{\sigma^2_0} + \frac{ \sum_{i=1}^N E_{q(z)}[z_{ik}]}{E_{q(\sigma^2_k)} [\sigma^2_k]} \Big{)}^{-1}, \quad
+\mu_{q(\mu_k)} = \sigma^2_{q(\mu_k)} \Big{(} \frac{\mu_0}{\sigma^2_0} + \frac{\sum_{i=1}^N y_i E_{q(z)}[z_{ik}]}{E_{q(\sigma^2_k)} [\sigma^2_k]}\Big{)}.
 \end{align}
 
 ##### Optimal density for $\mathbf{\sigma}^2_k$
 For $k = 1, 2, \cdots, K$,
 \begin{align}
     \log q_{\sigma^2_k}(\sigma^2_k) 
-    &\propto E_{\mathbf{z}, \mathbf{\mu}_k} \log p(\sigma^2_k \mid \cdot) \\
-    &= E_{\mathbf{z}, \mathbf{\mu}_k} \sum_{i=1}^N \log N(y_i ; \mu_k, \sigma^2_k)^{z_{ik}} + \log \text{IG}(\sigma^2_k ; \alpha_{\sigma^2_k}, \beta_{\sigma^2_k}).
+    &\propto E_{q(\mathbf{z}, \mathbf{\mu}_k)} \log p(\sigma^2_k \mid \cdot) \\
+    &= E_{q(\mathbf{z}, \mathbf{\mu}_k)} \Big{[}\sum_{i=1}^N \log N(y_i ; \mu_k, \sigma^2_k)^{z_{ik}} + \log \text{Inv-gamma}(\sigma^2_k ; \alpha_{\sigma^2_k}, \beta_{\sigma^2_k})\Big{]}.
 \end{align}
 It follows that,
 \begin{align}
-q_{\sigma^2_{k}}(\sigma^2_{k}) = \text{IG}\Big{(} A_{q(\sigma^2_k)}, B_{q(\sigma^2_k)} \Big{)}.
+q_{\sigma^2_{k}}(\sigma^2_{k}) = \text{Inv-gamma}\Big{(} A_{q(\sigma^2_k)}, B_{q(\sigma^2_k)} \Big{)}.
 \end{align}
 Where,
 \begin{align}
-     A_{q(\sigma^2_k)} = A + \frac{\sum_{i=1}^N E_{z}[z_{ik}]}{2}, \quad B_{q(\sigma^2_k)} = B + \frac{\sum_{i=1}^N E_{z, \mu_k}[(y_i - \mu_k)^2 z_{ik}]}{2}
+     A_{q(\sigma^2_k)} = A + \frac{\sum_{i=1}^N E_{q(z)}[z_{ik}]}{2}, \quad B_{q(\sigma^2_k)} = B + \frac{\sum_{i=1}^N E_{q(z, \mu_k)}[(y_i - \mu_k)^2 z_{ik}]}{2}
 \end{align}
 
 ##### Optimal density for $\mathbf{V}_k$
 For $k = 1, 2, \cdots, K-1$,
 \begin{align}
     \log q_{V_k}(V_k) 
-    &\propto E_{\mathbf{z}} \log p(V_k \mid \cdot) \\
-    &= E_{\mathbf{z}} \sum_{i=1}^N \sum_{k=1}^K \log \text{Ber}(z_{ik}; V_k) + \log \text{Beta}(V_k ; 1, \lambda)
+    &\propto E_{q(z)} \log p(V_k \mid \cdot) \\
+    &= E_{q(z)} \Big{[} \sum_{i=1}^N \sum_{k=1}^K \log \text{Ber}(z_{ik}; V_k) + \log \text{Beta}(V_k ; 1, \lambda) \Big{]}.
 \end{align}
 It follows that,
 \begin{align}
@@ -212,14 +215,14 @@ q_{V_{k}}(V_{k}) = \text{Beta}\Big{(}\alpha_{q(V_k)}, \beta_{q(V_k)} \Big{)}.
 \end{align}
 Where,
 \begin{align}
-\alpha_{q(V_k)} = 1 + \sum_{i=1}^N E_{z}[z_{ik}], \quad \beta_{q(V_k)} =  E_{\lambda}[\lambda] + \sum_{j = k+1}^{K} \sum_{i=1}^N E_z[z_{ij}]
+\alpha_{q(V_k)} = 1 + \sum_{i=1}^N E_{q(z)}[z_{ik}], \quad \beta_{q(V_k)} =  E_{q(\lambda)}[\lambda] + \sum_{j = k+1}^{K} \sum_{i=1}^N E_{q(z)}[z_{ij}]
 \end{align}
 
 ##### Optimal density for $\lambda$
 \begin{align}
     \log q_{\lambda}(\lambda) 
-    &\propto E_{\mathbf{V}} \log p(\lambda \mid \cdot) \\
-    &= E_{\mathbf{V}} \sum_{k=1}^K \log \text{Beta}(V_k; 1, \lambda) + \log \text{Gamma}(\lambda ; a_{\lambda}, b_{\lambda})
+    &\propto E_{q(V)} \log p(\lambda \mid \cdot) \\
+    &= E_{q(V)} \Big{[} \sum_{k=1}^K \log \text{Beta}(V_k; 1, \lambda) + \log \text{Gamma}(\lambda ; a_{\lambda}, b_{\lambda}) \Big{]}
 \end{align}
 It follows that,
 \begin{align}
@@ -227,14 +230,11 @@ It follows that,
 \end{align}
 Where,
 \begin{align}
-    \alpha_{q(\lambda)} = a_{\lambda} + N - 1, \quad \beta_{q(\lambda)} = b_{\lambda} - \sum_{k=1}^{K-1} E_{\mathbf{V}} \log (1 - V_k)
+    \alpha_{q(\lambda)} = a_{\lambda} + N - 1, \quad \beta_{q(\lambda)} = b_{\lambda} - \sum_{k=1}^{K-1} E_{q(V)} \log (1 - V_k)
 \end{align}
 
 ##### ELBO
-We now calculate the ELBO for the Dirichlet Process Gaussian Mixture Model. It is helpful to know that if $V_k \sim \text{Beta}(1, \lambda)$ then $1-V_k \sim \text{Beta}(\lambda, 1)$ and so it follows that
-\begin{align*}
-p(p_k) = p(V_k) \prod_{j=1}^{k-1}p(1 - V_j) = \text{Beta}(V_k ; 1, \lambda) \prod_{j=1}^{k-1} \text{Beta}(V_j \; \lambda, 1).
-\end{align*}
+We now calculate the ELBO for the Dirichlet Process Gaussian Mixture Model.
 Recall the ELBO has the form
 \begin{align}
     \text{ELBO}(q) = E_q [\log p(\theta, y)] - E_q[\log q(\theta)].
@@ -242,9 +242,9 @@ Recall the ELBO has the form
 We start with the first term
 \begin{split}
 E_q [ \log p(\mathbf{y}, \mathbf{z}, \mathbf{p}, \mathbf{V}, \lambda, \mathbf{\mu}, \mathbf{\sigma}^2)]  &= \sum_{i=1}^N \sum_{k=1}^{K} E_q [\log p(y_i, z_i \mid \mu_k, \sigma^2_k, p_k)] + E_q [\log p(\mu_k)] + E_q [\log p(\sigma^2_k)] + E_q [\log p(\boldsymbol{p} \mid \lambda)]  + E_q[p(\lambda)] \\
-    &= \sum_{i=1}^N \sum_{k=1}^{K} [(- E_q[z_{ik}]/2)(\log(2 \pi) + E_q[\log \sigma^2_k] + \frac{1}{E_q[\sigma^2_k]} E_q[(y_i - \mu_k)^2]) + E_q[z_{ik}] E_q [\log p_k]] \\ 
+    &= \sum_{i=1}^N \sum_{k=1}^{K} E_q[z_{ik}] [E_q[\log p_k] - \log(2\pi)/2 - \log(\sigma^2_k)/2 - E_q[(y_i - \mu_k])^2]/(2E_q[\sigma^2_k]) \\ 
     &+ \sum_{k=1}^K [(-1/2)(\log(2 \pi) + \log(\sigma^2_{\mu_k}) + \frac{1}{\sigma^2_{\mu_k}}E_q((\mu_k - \mu_{\mu_k})^2))] \\
-    &+ \sum_{k=1}^K [\log \beta_{\sigma^2_k} - \log \Gamma(\alpha_{\sigma^2_k}) - (\alpha_{\sigma^2_k} + 1)E_q[\log (\sigma^2_k)] + \frac{\beta_{\sigma^2_k}}{E_q[\sigma^2_k]}] \\
+    &+ \sum_{k=1}^K [\alpha_{\sigma^2_k} \log \beta_{\sigma^2_k} - \log \Gamma(\alpha_{\sigma^2_k}) - (\alpha_{\sigma^2_k} + 1)E_q[\log (\sigma^2_k)] + \frac{\beta_{\sigma^2_k}}{E_q[\sigma^2_k]}] \\
     &+\sum_{k=1}^K K [2 E_q[\log \Gamma(1 + \lambda)] - 2 E_q[\log \Gamma(\lambda)] + (E_q[\lambda]-1)E_q[\log (1-V_k)]] \\
     &+ a_{\lambda} \log (b_{\lambda}) - \log \Gamma (a_\lambda) + (a_{\lambda} - 1) E_q[\log \lambda] - b_{\lambda} E_q[\lambda]
 \end{split}
